// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionHistoryDialog renders with default props 1`] = `
<div
  className="version-history-dialog"
>
  <div
    className="version-history-dialog--header"
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mockDraftId"
        width="100%"
      />
    </div>
    <div
      className="title"
    >
      mockVersionHistoryDialogTitle
    </div>
    <button
      aria-label="Close dialog"
      className="repository--button close-button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="version-history-dialog--body"
  >
    <mock-CSSTransition
      in={true}
      timeout={250}
    >
      <div
        className="version-history-list"
      >
        <div
          className="menu-expanded"
        >
          <div
            className="version-history-list--title"
          >
            <div>
              Version History
            </div>
            <div
              className="desc"
            >
              newest first
            </div>
            <button
              className="toggle-button"
              onClick={[Function]}
            >
              Toggle Navigation Menu
            </button>
          </div>
        </div>
        <div
          className="menu-collapsed"
        >
          <button
            className="toggle-button"
            onClick={[Function]}
          >
            Toggle Navigation Menu
          </button>
        </div>
      </div>
    </mock-CSSTransition>
    <div
      className="editor-preview"
    >
      <div
        className="editor-preview--header"
      >
        <button
          className="repository--button restore-button"
          disabled={true}
          onClick={[Function]}
        >
          Restore this version
        </button>
        <span>
          Viewing: 
          Latest Version
        </span>
        <small>
          Note: Changes made in preview window will not be saved.
        </small>
      </div>
      <iframe
        frameBorder="0"
        loading="lazy"
        src={null}
      />
    </div>
  </div>
</div>
`;

exports[`VersionHistoryDialog renders with history items 1`] = `
<div
  className="version-history-dialog"
>
  <div
    className="version-history-dialog--header"
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mockDraftId"
        width="100%"
      />
    </div>
    <div
      className="title"
    >
      mockVersionHistoryDialogTitle
    </div>
    <button
      aria-label="Close dialog"
      className="repository--button close-button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="version-history-dialog--body"
  >
    <mock-CSSTransition
      in={true}
      timeout={250}
    >
      <div
        className="version-history-list"
      >
        <div
          className="menu-expanded"
        >
          <div
            className="version-history-list--title"
          >
            <div>
              Version History
            </div>
            <div
              className="desc"
            >
              newest first
            </div>
            <button
              className="toggle-button"
              onClick={[Function]}
            >
              Toggle Navigation Menu
            </button>
          </div>
          <div
            className="version-history-list--item is-selected"
            onClick={[Function]}
          >
            <span
              className="date"
            >
              mockCreatedAtDisplay1
            </span>
            <span
              className="username"
            >
              by 
              mockRevisionUsername
            </span>
            <span
              className="version latest"
            >
              Latest Version
            </span>
          </div>
          <div
            className="version-history-list--item"
            onClick={[Function]}
          >
            <span
              className="date"
            >
              mockCreatedAtDisplay2
            </span>
            <span
              className="username"
            >
              by 
              mockRevisionUsername
            </span>
            <span
              className="version"
            >
              Version 
              2
            </span>
          </div>
          <div
            className="version-history-list--item"
            onClick={[Function]}
          >
            <span
              className="date"
            >
              mockCreatedAtDisplay3
            </span>
            <span
              className="username"
            >
              by 
              mockRevisionUsername
            </span>
            <span
              className="version"
            >
              Version 
              1
            </span>
          </div>
        </div>
        <div
          className="menu-collapsed"
        >
          <button
            className="toggle-button"
            onClick={[Function]}
          >
            Toggle Navigation Menu
          </button>
        </div>
      </div>
    </mock-CSSTransition>
    <div
      className="editor-preview"
    >
      <div
        className="editor-preview--header"
      >
        <button
          className="repository--button restore-button"
          disabled={true}
          onClick={[Function]}
        >
          Restore this version
        </button>
        <span>
          Viewing: 
          Latest Version
        </span>
        <small>
          Note: Changes made in preview window will not be saved.
        </small>
      </div>
      <iframe
        frameBorder="0"
        loading="lazy"
        src="/editor/undefined/mockDraftId?read_only=1&revision_id=mockRevisionId1"
      />
    </div>
  </div>
</div>
`;
